--- a/exercicio03.html
+++ b/exercicio03.html
@@ -45,15 +45,101 @@
           <div class="field">
             <label class="label has-text-grey is-uppercase">Tratamento</label>
             <div class="control">
-              <input class="input" type="text" placeholder="Text input">
+              <input class="input" type="text" placeholder="Tratamento">
             </div>
           </div>
         </div>
         <div class="column is-6">
-          teste
+          <div class="field">
+            <label class="label has-text-grey is-uppercase">
+              Nome
+              <span class="required-label">*</span>
+            </label>
+            <div class="control">
+              <input class="input" type="text" placeholder="Informe o nome completo">
+            </div>
+          </div>
         </div>
       </div>
-    </div>
+      <div class="columns">
+        <div class="column is-3">
+          <div class="field">
+            <label class="label has-text-grey is-uppercase">Gênero</label>
+            <div class="control">
+              <div class="select is-fullwidth">
+                <select>
+                  <option>Masculino</option>
+                  <option>Feminino</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column is-3">
+          <div class="field">
+            <label class="label has-text-grey is-uppercase">CPF</label>
+            <div class="control">
+              <input class="input" type="text" placeholder="000.000.000-00">
+            </div>
+          </div>
+        </div>
+        <div class="column is-2">
+          <div class="field">
+            <label class="label has-text-grey is-uppercase">RG</label>
+            <div class="control">
+              <input class="input" type="text" placeholder="Informe o RG">
+            </div>
+          </div>
+        </div>
+        <div class="column is-2">
+          <div class="field">
+            <label class="label has-text-grey is-uppercase">Nascimento</label>
+            <div class="control has-icons-right">
+              <input class="input" type="text" placeholder="Informe a data">
+              <span class="icon is-small is-right">
+                <i class="fas fa-calendar-alt"></i>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="column is-2">
+          <div class="field">
+            <label class="label has-text-grey is-uppercase">
+              Advogado
+              <span class="required-label">*</span>
+            </label>
+            <div class="control">
+              <div class="select is-fullwidth">
+                <select>
+                  <option>Sim</option>
+                  <option>Não</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <div class="field">
+            <label class="label has-text-grey is-uppercase">Qualificação</label>
+            <div class="control">
+              <input class="input" type="text" placeholder="Insira mais informações sobre a pessoa">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <div class="field">
+            <label class="label has-text-grey is-uppercase">Palavras-chave</label>
+            <div class="control">
+              <input class="input" type="text" placeholder="Informe as palavras-chave desejadas">
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
     <div class="container custom-footer custom-padding pb-60">
       <div class="field is-grouped">
